--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,6 @@ export interface Props {
 import ProductsSroll from '@/containers/Product_Scroll';
 import '../styles/globals.css';
 import data from '@/utils/data';
-import CardSlider from '@/components/Card_Slider';
 import Header from '@/containers/Header';
 import Footer from '@/containers/Footer';
 
@@ -22,7 +21,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Header />
+    <Header client:load />
     <ProductsSroll products={data.products} />
     <Footer />
   </body>
