Update: Opacity and colors

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,8 @@
   --dark-gray: #292d32;
   --transparent-gray: #fffaf4d6;
   --transparent-gray-1: #f5ece3;
+  --blue-gray: #f5f8fa;
+  --blue-gray-1: #d3d5dd;
   --light-gray: #dad1bc;
   --light-gray-1: #dad1bce0;
   --light-gray-2: #ebe2cc;
@@ -14,7 +16,7 @@
   --dark-bg-color: #292d32;
   --light-bg-color: #dad1bc;
 
-  --primary-bg-color: var(--light-gray-1);
+  --primary-bg-color: #dad1bce0;
   --secondary-bg-color: #ffffff;
 
   --font-primary-color: #333333;
@@ -22,6 +24,13 @@
   --font-terceary-color: #666666;
 
   --ico-primary-color: #555555;
+  --ico-secondary-color: #a1a5b7;
+
+  --btn-input-primary-color: #f5f8fa;
+  --btn-input-border-primary-color: #d3d5dd;
+
+  --dark-reduced-opacitity: 1;
+  --dark-reduced-opacitity-1: 1;
 
   -webkit-font-smoothing: antialiased;
 
@@ -41,7 +50,7 @@
   transition-duration: 150ms;
 }
 
-/* [data-color-scheme='dark'] {
+[data-color-scheme='dark'] {
   --primary-bg-color: var(--dark-bg-color);
   --secondary-bg-color: #444444;
 
@@ -49,28 +58,21 @@
   --font-secondary-color: #555555;
   --font-terceary-color: #ffffff;
 
-  --ico-primary-color: #ffffff;
+  --ico-primary-color: #999999;
+  --ico-secondary-color: #999999;
+
+  --btn-input-primary-color: #292d32;
+  --btn-input-border-primary-color: #444444;
+
+  --dark-reduced-opacitity: 0.8;
+  --dark-reduced-opacitity-1: 0.7;
 
   color-scheme: dark;
 
-  img,
-  button,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
+  img {
     opacity: 70%;
   }
-
-  input,
-  .magnifyingGlass {
-    background-color: #292d32;
-    border-color: #444444;
-  }
-} */
+}
 
 * {
   transition-property: all;
@@ -87,7 +89,7 @@ img {
   max-inline-size: 100%;
   block-size: auto;
   object-fit: cover;
-  object-position: center center;
+  object-position: top center;
   position: relative;
 }
 
