--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,64 +1,24 @@
 ---
+import { Picture } from '@astrojs/image/components';
+
 export interface Props {
-  title: string;
-  body: string;
-  href: string;
+  name: string;
+  src: string;
 }
 
-const { href, title, body } = Astro.props;
+const { src, name } = Astro.props;
 ---
 
-<li class="link-card">
-  <a href={href}>
-    <h2>
-      {title}
-      <span>&rarr;</span>
-    </h2>
-    <p>
-      {body}
-    </p>
-  </a>
-</li>
-<style>
-  .link-card {
-    list-style: none;
-    display: flex;
-    padding: 0.25rem;
-    background-color: white;
-    background-image: none;
-    background-size: 400%;
-    border-radius: 0.6rem;
-    background-position: 100%;
-    transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-      0 2px 4px -2px rgba(0, 0, 0, 0.1);
-  }
-
-  .link-card > a {
-    width: 100%;
-    text-decoration: none;
-    line-height: 1.4;
-    padding: 1rem 1.3rem;
-    border-radius: 0.35rem;
-    color: #111;
-    background-color: white;
-    opacity: 0.8;
-  }
-  h2 {
-    margin: 0;
-    font-size: 1.25rem;
-    transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-  }
-  p {
-    margin-top: 0.5rem;
-    margin-bottom: 0;
-    color: #444;
-  }
-  .link-card:is(:hover, :focus-within) {
-    background-position: 0;
-    background-image: var(--accent-gradient);
-  }
-  .link-card:is(:hover, :focus-within) h2 {
-    color: rgb(var(--accent));
-  }
-</style>
+<div class="flex-shrink-0 w-full">
+  <div class="relative w-[90%] shadow-md my-3 mx-auto rounded-md">
+    <Picture
+      src={src}
+      formats={['webp', 'avif', 'jpeg']}
+      widths={[200, 400, 800]}
+      aspectRatio="9:3"
+      sizes="(max-width: 800px) 100vw, 800px"
+      alt={name}
+    />
+  </div>
+</div>
+<style></style>
