--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,8 @@ import '../styles/globals.css';
 import data from '@/utils/data';
 import Header from '@/containers/Header';
 import Footer from '@/containers/Footer';
+import Card from '@/components/Card.astro';
+import CardSlider from '@/components/Card_Slider.astro';
 
 const { title } = Astro.props;
 ---
@@ -21,7 +23,8 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Header client:load />
+    <Header />
+    <CardSlider images={data.slider} />
     <ProductsSroll products={data.products} />
     <Footer />
   </body>
