Update: resize product images to 1:1

--- a/src/components/Product_Item.astro
+++ b/src/components/Product_Item.astro
@@ -12,14 +12,14 @@ const { product } = Astro.props;
 
 <div class={`w-[50%] pb-4`}>
   <div class="product-card m-auto w-[92%] shadow-md">
-    <div class="relative w-full pb-[100%] overflow-hidden rounded-t-lg">
+    <div class="relative w-full overflow-hidden rounded-t-lg">
       <Picture
         src={product.image.src}
+        alt={product.image.name}
         formats={['webp', 'avif', 'jpeg']}
         widths={[200, 400, 800]}
         aspectRatio="1:1"
-        sizes="(max-width: 800px) 100vw, 800px"
-        alt={product.image.name}
+        sizes="(max-width: 800px) 75vw, 800px"
       />
     </div>
     <ProductDescription product={product} />
