--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Header />
+    <Header client:load />
     <CardSlider images={data.slider} />
     <ProductsSroll products={data.products} />
     <Footer />
