Add: instagram link btn

--- a/src/containers/Card_Slider.astro
+++ b/src/containers/Card_Slider.astro
@@ -13,9 +13,14 @@ const { images } = Astro.props;
 ---
 
 <div
-  class="w-[95%] m-auto rounded-t-lg bg-[var(--secondary-bg-color)] shadow-lg transition-all"
+  class="w-[95%] flex flex-col m-auto rounded-t-lg bg-[var(--secondary-bg-color)] shadow-lg transition-all"
 >
   <div class="relative flex w-full">
     {images.map((image, index) => <Card src={image.src} name={image.name} />)}
   </div>
+  <button
+    class="max-w-[80%] opacity-[var(--dark-reduced-opacitity-1)] my-5 mx-auto rounded-md bg-[var(--light-gray-1)] p-2 text-[0.8rem] font-medium text-[var(--font-secondary-color)] shadow-md"
+  >
+    Click aquí para stalkear nuestro Instagram ;)
+  </button>
 </div>
