--- a/src/containers/Card_Slider.astro
+++ b/src/containers/Card_Slider.astro
@@ -13,7 +13,7 @@ const { images } = Astro.props;
 ---
 
 <div
-  class="w-[95%] flex flex-col m-auto rounded-t-lg bg-[var(--secondary-bg-color)] shadow-lg transition-all"
+  class="w-[95%] flex flex-col m-auto rounded-t-lg bg-[var(--secondary-bg-color)] shadow-lg"
 >
   <div class="relative flex w-full">
     {images.map((image, index) => <Card src={image.src} name={image.name} />)}
