--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,14 @@
 ---
-export interface Props {
-  title: string;
-}
-
 import ProductsSroll from '@/containers/Product_Scroll.astro';
 import '../styles/globals.css';
 import data from '@/utils/data';
 import Header from '@/containers/Header';
-import Footer from '@/containers/Footer';
+import Footer from '@/containers/Footer.astro';
 import CardSlider from '@/containers/Card_Slider.astro';
+
+export interface Props {
+  title: string;
+}
 
 const { title } = Astro.props;
 ---
