--- a/src/containers/Footer.astro
+++ b/src/containers/Footer.astro
@@ -1,3 +1,8 @@
+---
+export interface IProps {}
+const {} = Astro.props;
+---
+
 <footer
   class="flex min-h-[50px] items-center justify-center shadow-inner flex-col"
 >
