Adding common Meta-Data Algorithm ( Patron Layout)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,16 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import data from '@/utils/data';
+import Layout from '@/layout/Layout.astro';
+import ProductsSroll from '@/containers/Product_Scroll.astro';
+import CardSlider from '@/containers/Card_Slider.astro';
+import '@/styles/global.css';
+
+export interface Props {
+  title: string;
+}
 ---
 
-<Layout title="Welcome to Astro." />
-
-<style></style>
+<Layout title="Home">
+  <CardSlider images={data.slider} />
+  <ProductsSroll products={data.products} />
+</Layout>
