--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,5 @@ export interface Props {
 
 <Layout title="Home">
   <CardSlider images={data.slider} />
-  <ProductsSroll products={data.products} />
+  <ProductsSroll products={data.products} categories={data.categories} />
 </Layout>
