Revert "integrating prisma and aws"
This reverts commit 37e82647e69fbd70d9d6c0054eeba043836dd7d2.

--- a/src/containers/Card_Slider.astro
+++ b/src/containers/Card_Slider.astro
@@ -1,6 +1,6 @@
 ---
 import { NextSlider, PrevSlider } from '@/components/Icons';
-import Card from '@/components/Card.astro';
+import Card from '../components/Card.astro';
 
 interface Images {
   name: string;
