Fixing relative path bug

--- a/src/containers/Card_Slider.astro
+++ b/src/containers/Card_Slider.astro
@@ -1,5 +1,5 @@
 ---
-import { NextSlider, PrevSlider } from '@/components/Icons';
+import { NextSlider, PrevSlider } from '../components/Icons';
 
 interface Images {
   name: string;
