--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,6 +1,6 @@
 ---
-import PlayGround from '@/docs/PlayGround.astro';
-import '@/styles/global.css';
+import PlayGround from '../docs/PlayGround.astro';
+import '../styles/global.css';
 ---
 
 <PlayGround title="Test - Loft35" />
