--- a/src/containers/Header.astro
+++ b/src/containers/Header.astro
@@ -1,5 +1,5 @@
 ---
-import NavBar from '@/components/NavBar.astro';
+import NavBar from '../components/NavBar.astro';
 ---
 
 <header class="mx-auto">
