--- a/src/docs/PlayGround.astro
+++ b/src/docs/PlayGround.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@/layout/Layout.astro';
+import Layout from '../layout/Layout.astro';
 import Header from './Component.astro';
 const Element = 'div';
 const Component = Header;
