--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import data from '@/utils/data';
-import Header from '@/containers/Header.astro';
-import Footer from '@/containers/Footer.astro';
-import '@/styles/global.css';
+import data from '../utils/data';
+import Header from '../containers/Header.astro';
+import Footer from '../containers/Footer.astro';
+import '../styles/global.css';
 
 export interface Props {
   title: string;
