--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@/layout/Layout.astro';
+import Layout from '../layout/Layout.astro';
 ---
 
 <Layout title="404 Not Found">
